--- a/style.css
+++ b/style.css
@@ -560,10 +560,185 @@ box-shadow: 1px 18px 13px 0px rgba(0,0,0,0.75);
     }
 }
 @media(max-width:768px){
+    body{
+        font-size: 18px;
+    }
     .chevron {
         right: -336px;
     }
     .callme {
         right: -380px;
     }
+    .info_header{
+        margin-left: 30px;
+    }
+    .header_text{
+        font-size: 18px;
+    }
+    .nav_list_item{
+        padding: 12px 16px;
+    }
+    .phone_link{
+        font-size: 18px;
+    }
+    .chevron{
+        right: -320px;
+        top: 70px;
+    }
+    .call_icon {
+        margin-left: 56px;
+        margin-top: 27px;
+    }
+    .callme{
+        width: 138px;
+        height: 138px;
+        border-radius: 85px;
+    }
+    .btn{
+        width: 300px;
+        height: 60px;
+    }
+    .btn_text{
+        font-size: 26px;
+    }
+    .production_title{
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+    .prod_list_item{
+        margin-bottom: 14px;
+    }
+    .about_text{
+        font-size: 20px;
+    }
+    .news_text{
+        font-size: 20px;
+    }
+    .news_btn{
+        width: 340px;
+        height: 60px;
+    }
+    .news_btn_text{
+        font-size: 26px;
+        padding: 10px;
+    }
+    .text_wrapper{
+        display: none;
+    }
+    #chevron_footer {
+        top: 4px;
+        right: 42px;
+    }
+
+}
+@media(max-width:425px){
+    .container{
+        width: 425px;
+        overflow-x: hidden;
+    }
+    .callme{
+        display: none;
+    }
+    .header{
+        width: 425px;
+    }
+    .personal_account{
+        display: none;
+    }
+    .contact_header{
+        display: none;
+    }
+    .shop{
+        display: none;
+    }
+    .subheader{
+        display: none;
+    }
+    .main_part{
+        width: 425px;
+    }
+    .burger_menu span{
+        border-radius: 5px;
+        display: block;
+        margin-top: 7px;
+        margin-bottom: 7px;
+        width: 32px;
+        height: 4px;
+        background-color: #1AB0CE;
+    }
+    .burger_menu{
+        margin-left: 72px;
+        margin-top: 14px;
+    }
+    .burger_menu::before,
+    .burger_menu::after{
+        content: '';
+        border-radius: 5px;
+        display: block;
+        background-color: #1AB0CE;
+        width: 32px;
+        height: 4px;
+    
+    }
+    .info_header{
+        display: none;
+    }
+    .intro_title{
+        padding-top: 75px;
+        font-size: 34px;
+    }
+    .btn{
+        margin-top: 140px;
+    }
+    .production .container{
+        padding: 0 28px;
+    }
+    .production_item{
+        margin-bottom: 16px;
+    }
+    .production_wrapper{
+        display: block;
+    }
+    .section_subtitle{
+        font-size: 19px;
+    }
+    .about_text{
+        font-size: 14px;
+    }
+    .about_us::after{
+        width: 425px;
+    }
+    .news{
+        width: 425px;
+        height: 820px;
+    }
+    .news_wrapper{
+        display: block;
+    }
+    .footer{
+        width: 425px;
+        height: 420px;
+    }
+    .footer_inner_wrapper{
+        display: block;
+    }
+    .footer_nav_list:first-child .footer_nav_item{
+        margin-left: 0;
+    }
+    .footer_nav_item{
+        margin-left: 15px;
+    }
+    #chevron_footer {
+        right: 173px;
+    }
+    .contact_footer{
+        float: left;
+    }
+    .glyanec_logo{
+        margin-top: 30px;
+    }
+    .glyanec_text{
+        margin-right: 120px;
+    }
+
 }
